--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 	<link rel="preload" as="font" href="./css/fonts/gotham-bold-webfont.woff2" type="font/woff2" crossorigin="anonymous">
 	<link rel="preload" as="font" href="./css/fonts/Roboto-Regular.woff" type="font/woff" crossorigin/>
-	
+
   	<script src="js/js.js" type="text/javascript"></script>
   </head>
 
@@ -45,22 +45,41 @@
 		<nav class="header">
 			<ul id="menu">
 				<li>
-					<button class="cta cta-nav btn-about" data-cat="about" onclick="navClick(this);">About</button>
+					<button class="cta cta-nav btn-about" data-cat="about" onclick="navClick(this);">
+					  About
+					  <img src="images/1x/EMG_arrow.png" class="rotate-icon" alt="Custom Icon">
+					</button>
 				</li>
 				<li>
-					<button class="cta cta-nav btn-team" data-cat="team" onclick="navClick(this);">Team</button>
+					<button class="cta cta-nav btn-team" data-cat="team" onclick="navClick(this);">
+					  Team
+					  <img src="images/1x/EMG_arrow.png" class="rotate-icon" alt="Custom Icon">
+					</button>
 				</li>
 				<li>
-					<button class="cta cta-nav btn-artists" data-cat="artists" onclick="navClick(this);">Artists</button>
+					<button class="cta cta-nav btn-artists" data-cat="artists" onclick="navClick(this);">
+						Artists
+						<img src="images/1x/EMG_arrow.png" class="rotate-icon" alt="Custom Icon">
+					</button>
 				</li>
 				<li>
-					<button class="cta cta-nav btn-music" data-cat="music" onclick="navClick(this);">Music</button>
+					<button class="cta cta-nav btn-merch" data-cat="merch" onclick="navClick(this);">
+						Merch
+						<img src="images/1x/EMG_arrow.png" class="rotate-icon" alt="Custom Icon">
+					</button>
+				</li>
+				<li>
+					<button class="cta cta-nav btn-music" data-cat="music" onclick="navClick(this);">
+						Music
+						<img src="images/1x/EMG_arrow.png" class="rotate-icon" alt="Custom Icon">
+					</button>
 				</li>
 				<li>
 					<span>en</span>/<a href="fr/index.html">fr</a>
 				</li>
 			</ul>
 		</nav>
+		<!--About section-->
 		<section class="section-container">
 			<section id="about" class="section-content about">
 				<div>
@@ -68,7 +87,7 @@
 						<span>EMG</span> manages artists. <br />
 					</p>
 					<p>
-						<span>EMG</span> shares opinions. <br />
+						<span>EMG</span> makes merch. <br />
 					</p>
 					<p>
 						<span>EMG</span> showcases music. <br />
@@ -78,7 +97,7 @@
 					</p>
 				</div>
 		</section>
-			
+		<!--Team section-->	
 		<section id="team" class="section-content about">
 			<div>
 				<p>
@@ -98,6 +117,7 @@
 				</p>
 			</div>
 		</section>
+		<!--Artists section-->
 		<section id="artists" class="section-content artists">
 			<div>
 				<p>
@@ -131,6 +151,17 @@
 				</p>
 			</div>
 		</section>
+		<!--Merch section-->
+		<section id="merch" class="section-content media">
+			<div>
+				<p>
+					<a href="#" target="_blank">
+						WODD
+					</a>
+				</p>
+			</div>
+		</section>
+		<!--Music section-->
 		<section id="music" class="section-content about">
 			<div>
 				<p>
